--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "moment-timezone": "^0.5.32",
     "vue": "^2.6.11",
     "vue-i18n": "^8.22.4",
+    "vue-puzzle-vcode": "^1.1.4",
     "vue-router": "^3.2.0",
     "vue2-verify": "^1.1.5",
     "vuex": "^3.4.0"
